--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <main id="top">
     <section class="hero-full">
       <div class="hero-bg">
-        <img src="./根占グリーンプラネット写真/LINE_ALBUM_素材写真_251223_1.jpg" alt="ももちゃんトマト">
+        <img src="./assets/img/hero_bg.jpg" alt="ももちゃんトマト">
       </div>
       <div class="hero-content">
         <h1>お子さまからご高齢の方まで<br>安心して食べられる<br>根占のトマト</h1>
