--- a/index.html
+++ b/index.html
@@ -3,8 +3,24 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>根占グリーンプラネット | ももちゃんトマト通販</title>
-  <meta name="description" content="甘みが強くまるでフルーツのような『ももちゃんトマト』を中心に、人や環境にもやさしいミニトマト栽培を行う根占グリーンプラネットの公式サイト。">
+  <title>根占グリーンプラネット | ももちゃんトマト通販・産地直送</title>
+  <meta name="description" content="鹿児島から産地直送。甘みが強くまるでフルーツのような『ももちゃんトマト』を中心に、人や環境にもやさしいミニトマト栽培を行う根占グリーンプラネットの公式サイトです。お子様からご高齢の方まで安心してお召し上がりいただけます。">
+  
+  <!-- OGP (SNSシェア設定) -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://nejimegreenplanet.com/">
+  <meta property="og:title" content="根占グリーンプラネット | ももちゃんトマト通販">
+  <meta property="og:description" content="甘みが強くまるでフルーツのような『ももちゃんトマト』。鹿児島から産地直送でお届けします。">
+  <meta property="og:image" content="https://nejimegreenplanet.com/assets/img/hero_bg.jpg">
+  <meta property="og:site_name" content="根占グリーンプラネット">
+  
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="根占グリーンプラネット | ももちゃんトマト通販">
+  <meta name="twitter:description" content="甘みが強くまるでフルーツのような『ももちゃんトマト』。鹿児島から産地直送でお届けします。">
+  <meta name="twitter:image" content="https://nejimegreenplanet.com/assets/img/hero_bg.jpg">
+
+  <link rel="canonical" href="https://nejimegreenplanet.com/">
   <link rel="icon" type="image/jpeg" href="./assets/img/nplogo.jpg">
   <link rel="preload" href="./assets/img/hero_bg.jpg" as="image">
   <link rel="stylesheet" href="./assets/css/style.css?v=14">
