--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google-site-verification" content="VDHg0xpDfQ3V0sulPgObXYPSagITREdhybPY04RgomQ" />
   <title>根占グリーンプラネット | ももちゃんトマト通販・産地直送</title>
   <meta name="description" content="鹿児島から産地直送。甘みが強くまるでフルーツのような『ももちゃんトマト』を中心に、人や環境にもやさしいミニトマト栽培を行う根占グリーンプラネットの公式サイトです。お子様からご高齢の方まで安心してお召し上がりいただけます。">
   
