--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
   <meta name="twitter:image" content="https://nejimegreenplanet.com/assets/img/hero_bg.jpg">
 
   <link rel="canonical" href="https://nejimegreenplanet.com/">
-  <link rel="icon" type="image/jpeg" href="./assets/img/nplogo.jpg">
+  <!-- ファビコン（ブラウザのタブやGoogle検索結果用） -->
+  <link rel="icon" href="https://nejimegreenplanet.com/assets/img/nplogo.jpg" sizes="any">
+  <link rel="apple-touch-icon" href="https://nejimegreenplanet.com/assets/img/nplogo.jpg">
   <link rel="preload" href="./assets/img/hero_bg.jpg" as="image">
   <link rel="stylesheet" href="./assets/css/style.css?v=14">
   <link rel="preconnect" href="https://fonts.googleapis.com">
