--- a/index.html
+++ b/index.html
@@ -30,6 +30,30 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Shippori+Mincho:wght@400;600;800&display=swap" rel="stylesheet">
+  
+  <!-- 構造化データ (Googleに正確な情報を伝える設定) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "AgriculturalBusiness",
+    "name": "株式会社根占グリーンプラネット",
+    "image": "https://nejimegreenplanet.com/assets/img/nplogo.jpg",
+    "url": "https://nejimegreenplanet.com",
+    "telephone": "0994-24-5060",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "根占横別府330-2",
+      "addressLocality": "南大隅町, 肝属郡",
+      "addressRegion": "鹿児島県",
+      "postalCode": "893-2503",
+      "addressCountry": "JP"
+    },
+    "description": "鹿児島から産地直送。甘みが強くまるでフルーツのような『ももちゃんトマト』を中心に、人や環境にもやさしいミニトマト栽培を行う根占グリーンプラネットの公式サイトです。",
+    "sameAs": [
+      "https://www.instagram.com/nejime.green.planet/"
+    ]
+  }
+  </script>
 </head>
 <body>
   <header class="site-header">
@@ -60,7 +84,7 @@
   <main id="top">
     <section class="hero-full">
       <div class="hero-bg">
-        <img src="./assets/img/hero_bg.jpg" alt="ももちゃんトマト">
+        <img src="./assets/img/hero_bg.jpg" alt="鹿児島県産 ももちゃんトマト 産地直送">
       </div>
       <div class="hero-content">
         <h1>お子さまからご高齢の方まで<br>安心して食べられる<br>根占のトマト</h1>
@@ -78,21 +102,21 @@
           <div class="product-card">
             <h3>ももちゃんトマト</h3>
             <div class="product-img">
-              <img src="./assets/img/product_momo.png?v=1" alt="ももちゃんトマト">
+              <img src="./assets/img/product_momo.png?v=1" alt="ももちゃんトマト 鹿児島 産地直送">
             </div>
             <p>薄い皮が特長のミニトマトです。<br><br>小さなお子さまから高齢者の方まで幅広い年代の方々に親しまれています。<br><br>また、甘みが強く、まるでフルーツのようなミニトマトなので、食べやすいとご好評いただいております。</p>
           </div>
           <div class="product-card">
             <h3>小鈴</h3>
             <div class="product-img">
-              <img src="./assets/img/product_kosuzu.jpg?v=1" alt="小鈴">
+              <img src="./assets/img/product_kosuzu.jpg?v=1" alt="小鈴 ミニトマト">
             </div>
             <p>甘みと酸味のバランスが特長のミニトマトです。<br><br>皮は厚めでパリッとしています。フレッシュさを口に入れた瞬間に感じていただけるミニトマトです。<br><br>さっぱりとした味わいでミニトマトが好きな方におすすめです。</p>
           </div>
           <div class="product-card">
             <h3>シュガープラム</h3>
             <div class="product-img">
-              <img src="./assets/img/Sugar Plum.jpg?v=1" alt="シュガープラム">
+              <img src="./assets/img/Sugar Plum.jpg?v=1" alt="シュガープラム 高糖度ミニトマト">
             </div>
             <p>濃厚な甘みが特長のミニトマトです。<br><br>果肉がしっかりしており、ひと口かじるとコクのある甘さが口いっぱいに広がります。<br>酸味は控えめで、デザート感覚でもお召し上がりいただけるミニトマトです。<br><br>そのまま食べるのはもちろん、サラダやお弁当にもおすすめで、甘いミニトマトがお好きな方にぜひ味わっていただきたい品種です。</p>
           </div>
@@ -103,7 +127,7 @@
     <section id="philosophy" class="feature-section alternate fade-in-up">
       <div class="container feature-grid">
         <div class="feature-image">
-          <img src="./assets/img/index_img04.jpg?v=2" alt="栽培の様子">
+          <img src="./assets/img/index_img04.jpg?v=2" alt="鹿児島県南大隅町 根占グリーンプラネットのトマト栽培の様子">
         </div>
         <div class="feature-text">
           <span class="sub-label">Philosophy</span>
@@ -127,7 +151,7 @@
     <section id="greeting" class="feature-section fade-in-up">
       <div class="container feature-grid">
         <div class="feature-image">
-          <img src="./assets/img/greeting.jpg?v=1" alt="代表の写真">
+          <img src="./assets/img/greeting.jpg?v=1" alt="根占グリーンプラネット代表 田淵格">
         </div>
         <div class="feature-text">
           <span class="sub-label">Greeting</span>
